# ai-assignment-evaluator

./: pyproject.toml  requirements.txt  run_workflow.py
Model/: llm.py  state.py
Nodes/: code_analyser.py  evaluate_answer.py  repo_fetcher.py  score_assignment.py
